base/src/test/resources/failure/patterns/issues-archived/issue355.aya.txt
In file $FILE:7:4 ->

  5 |  | suc Nat
  6 | 
  7 | def addN (a : I) : Nat
          ^--^

Error: Cannot perform pattern matching `left`
What are you doing?
